<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity" tools:ignore="MergeRootFrame" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnWeb"
        android:id="@+id/btnWeb"
        android:layout_marginTop="29dp"
        android:minWidth="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCall"
        android:id="@+id/btnCall"
        android:layout_below="@+id/btnWeb"
        android:layout_alignStart="@+id/btnWeb"
        android:layout_alignEnd="@+id/btnWeb" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDial"
        android:id="@+id/btnDial"
        android:layout_below="@+id/btnCall"
        android:layout_alignStart="@+id/btnCall"
        android:layout_alignEnd="@+id/btnCall" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGeo"
        android:id="@+id/btnGeo"
        android:layout_below="@+id/btnDial"
        android:layout_alignStart="@+id/btnDial"
        android:layout_alignEnd="@+id/btnDial" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnContact"
        android:id="@+id/btnContact"
        android:layout_below="@+id/btnGeo"
        android:layout_alignStart="@+id/btnGeo"
        android:layout_alignEnd="@+id/btnGeo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEdit"
        android:id="@+id/btnEdit"
        android:layout_below="@+id/btnContact"
        android:layout_alignStart="@+id/btnContact"
        android:layout_alignEnd="@+id/btnContact" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculate"
        android:id="@+id/btnCalculate"
        android:layout_below="@+id/btnEdit"
        android:layout_alignStart="@+id/btnEdit"
        android:layout_alignEnd="@+id/btnEdit" />
</RelativeLayout>
