<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="be.howest.nmct.demoimplicit.LocationActivity">

    <TextView android:text="@string/txtLocationHeader" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtLocationHeader" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtLatitude"
        android:layout_below="@+id/txtLocationHeader"
        android:layout_alignParentStart="true"
        android:text="@string/txtLatitude" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtLongitude"
        android:layout_below="@+id/txtLatitude"
        android:layout_alignParentStart="true"
        android:text="@string/txtLongitude" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLocatie"
        android:id="@+id/btnLocatie"
        android:minWidth="350dp"
        android:layout_below="@+id/txtLongitude"
        android:layout_alignParentStart="true" />

</RelativeLayout>
